--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -13,13 +13,12 @@
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 60px;
-    row-gap: 141px;
+    gap: 60px;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: repeat(4, 1fr);
-    row-gap: 143px;
+    row-gap: 63px;
     column-gap: 80px;
   }
 }
@@ -30,6 +29,7 @@
   margin-bottom: 30px;
 
   @media (min-width: $tablet-width) {
+    @include site-title(60px, 60px);
     grid-column: 1/3;
     margin-top: 65px;
     margin-bottom: 22px;
