--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -2,7 +2,7 @@
 @use "../variables.scss" as *;
 
 .example {
-  width: 100vw;
+  width: 320px;
   position: relative;
   padding-top: 25px;
   padding-bottom: 40px;
@@ -10,6 +10,13 @@
 
   @media (min-width: $tablet-width) {
     background-color: transparent;
+    width: 768px;
+    background-image: linear-gradient(to bottom, transparent 0, transparent 576px, #eaeaea 576px, #eaeaea 100%);
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+    background-image: linear-gradient(to bottom, transparent 0, transparent 136px, $bgcolor-secondary 136px, $bgcolor-secondary 100%);
   }
 }
 
@@ -69,7 +76,7 @@
 
   @media (min-width: $tablet-width) {
     gap: 42px;
-    margin-bottom: 255px;
+    margin-bottom: 104px;
   }
 
   @media (min-width: $desktop-width) {
@@ -157,13 +164,69 @@
 }
 
 .example__slider {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
+  height: 256px;
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     grid-row: 1/4;
     grid-column: 2/3;
+    width: 560px;
+    height: 512px;
+    margin: 0 auto;
   }
+}
+
+.example__before-wrapper {
+  width: 50%;
+  background: url("../img/fat-cat-mobile.png") no-repeat;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/fat-cat-mobile@2x.png");
+    background-size: cover;
+  }
+
+  @media (min-width: $tablet-width) {
+    background-image: url("../img/fat-cat-tablet.png");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/fat-cat-tablet@2x.png");
+    }
+  }
+}
+
+.example__after-wrapper {
+  width: 50%;
+  background: url("../img/slim-cat-mobile.png") no-repeat;
+  background-size: cover;
+  background-position: right;
+
+  @media (min-resolution: 2dppx) {
+    background: url("../img/slim-cat-mobile@2x.png") no-repeat;
+    background-size: cover;
+    background-position: right;
+  }
+
+  @media (min-width: $tablet-width) {
+    background-image: url("../img/slim-cat-tablet.png");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/slim-cat-tablet@2x.png");
+    }
+  }
+}
+
+.example__button {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  border: none;
+  cursor: pointer;
+  transform: translateX(-50%);
+  background-color: transparent;
+  z-index: 1;
 }
 
 .example__decor {
