--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -14,10 +14,15 @@
     width: 100%;
     min-height: 302px;
     background-color: #639e40;
-    background-image: url("../img/cat.png");
+    background-image: url("../img/hero-cat-mobile.jpg");
     background-repeat: no-repeat;
     background-position: top center;
     z-index: -1;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/hero-cat-mobile@2x.jpg");
+      background-size: 320px auto;
+    }
 
     @media (min-width: $tablet-width) {
       display: none;
@@ -26,12 +31,18 @@
     @media (min-width: $desktop-width) {
       display: block;
       z-index: 0;
-      right: 0;
-      min-width: 720px;
-      min-height: 694px;
+      left: 720px;
+      // right: 0;
+      width: 720px;
+      height: 694px;
       background-color: transparent;
-      background-image: url("../img/index-background-desktop1.png");
+      background-image: url("../img/hero-cat-desktop.jpg");
       background-position: top right;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/hero-cat-desktop@2x.jpg");
+        background-size: 710px auto;
+      }
     }
   }
 
@@ -77,7 +88,7 @@
       top: 263px;
       left: 30px;
       transform: none;
-      background: url("../img/index-can-tablet1.png") no-repeat;
+      background: url("../img/index-can-tablet.png") no-repeat;
     }
   }
 
@@ -91,7 +102,7 @@
       height: 499px;
       top: 141px;
       left: 558px;
-      background: url("../img/index-can.png") no-repeat;
+      background: url("../img/index-can-desktop.png") no-repeat;
     }
   }
 }
