--- a/source/sass/blocks/invite-dealers.scss
+++ b/source/sass/blocks/invite-dealers.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  width: 320px;
 
   &--secondary {
     background-color: $bgcolor-secondary;
@@ -12,6 +13,11 @@
 
   @media (min-width: $desktop-width) {
     position: relative;
+    width: 768px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
   }
 }
 
@@ -77,7 +83,7 @@
 .invite-dealers__map-wrapper iframe {
   border: none;
   display: block;
-  width: 100vw;
+  width: 100%;
   min-height: 362px;
 
   @media (min-width: $tablet-width) {
