--- a/source/sass/blocks/main-container.scss
+++ b/source/sass/blocks/main-container.scss
@@ -5,6 +5,7 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  // margin: 0 auto;
   width: 100vw;
   border-top: 1px solid #d9d9d9;
 
