--- a/source/sass/blocks/promotion.scss
+++ b/source/sass/blocks/promotion.scss
@@ -25,22 +25,37 @@
   padding: 187px 59px 43px;
   text-align: center;
   color: #ffffff;
-  background-image: url("../img/cat-carrier.png");
+  background-image: url("../img/cat-carrier-mobile.jpg");
   background-repeat: no-repeat;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/cat-carrier-mobile@2x.jpg");
+    background-size: 280px auto;
+  }
 
   @media (min-width: $tablet-width) {
     padding: 71px 124px 69px 422px;
     text-align: left;
-    background-image: url("../img/cat-carrier-tablet.png");
+    background-image: url("../img/cat-carrier-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/cat-carrier-tablet@2x.jpg");
+      background-size: 707px auto;
+    }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: url("../img/cat-carrier-desktop.png");
+    background-image: url("../img/cat-carrier-desktop.jpg");
     padding: 184px 43px 42px 41px;
     box-sizing: border-box;
     text-align: center;
     min-width: 243px;
     min-height: 289px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/cat-carrier-desktop@2x.jpg");
+      background-size: 245px auto;
+    }
   }
 
   &::before {
