--- a/source/sass/blocks/promotion.scss
+++ b/source/sass/blocks/promotion.scss
@@ -65,7 +65,7 @@
     content: "";
     width: 78px;
     height: 80px;
-    background: url("../img/icons/gift-icon.svg") no-repeat;
+    background: url("../img/sprite.svg#gift-icon") no-repeat;
 
     @media (min-width: $tablet-width) {
       top: 57px;
