--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,8 +2,16 @@
 @use "../mixins.scss" as *;
 
 .footer {
-  width: 100vw;
+  width: 320px;
   background-color: $bgcolor-secondary;
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+  }
 }
 
 .footer__container {
@@ -18,6 +26,7 @@
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
     gap: 0;
     padding-top: 55px;
@@ -37,27 +46,33 @@
   align-items: center;
 
   @media (min-width: $tablet-width) {
-    // justify-content: space-between;
     width: 167px;
   }
 }
 
 .footer__academy-logo {
-  color: #666666;
+  background-color: #666666;
+  width: 27px;
+  height: 34px;
+  mask: url("../img/sprite.svg#htmlacademy-logo");
+  // color: #666666;
 
   &:hover,
   &:focus {
-    color: #68b738;
+    background-color: $main-color;
     outline: none;
   }
 
   &:active {
-    color: rgba(104, 183, 56, 0.3);
+    opacity: 0.3;
   }
 }
 
 .footer__academy-logo-letter {
-  color: #444444;
+  background-color: #444444;
+  width: 113px;
+  height: 19px;
+  mask: url("../img/sprite.svg#htmlacademy-logo-letter");
 
   &:hover,
   &:focus {
@@ -66,6 +81,6 @@
   }
 
   &:active {
-    color: rgba(68, 68, 68, 0.3);
+    opacity: 0.3;
   }
 }
