--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,4 +1,5 @@
 @use "../variables.scss" as *;
+@use "../mixins.scss" as *;
 
 .logo {
   display: flex;
@@ -17,30 +18,26 @@
   }
 
   &--letter {
-    justify-content: center;
+    align-self: center;
+    width: 128px;
+    height: 24px;
+    mask: url("../img/sprite.svg#logo-footer-mobile");
+    background-color: #111111;
 
     &:hover,
     &:focus {
-      color: #3e3e3e;
+      background-color: #3e3e3e;
       outline: none;
     }
 
     &:active {
-      color: #6b6b6b;
+      background-color: #6b6b6b;
+    }
+
+    @media (min-width: $tablet-width) {
+      width: 143px;
+      height: 27px;
+      mask: url("../img/sprite.svg#logo-footer-tablet");
     }
   }
 }
-
-// .logo__letter {
-//   margin-left: 56px;
-
-//   @media (min-width: $tablet-width) {
-//     margin-left: 12px;
-//   }
-// }
-
-// @media (min-width: $tablet-width) {
-//   .logo__letter {
-//     margin-left: 12px;
-//   }
-// }
