--- a/source/sass/blocks/main-container.scss
+++ b/source/sass/blocks/main-container.scss
@@ -5,15 +5,17 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  width: 320px;
   // margin: 0 auto;
-  width: 100vw;
+  // width: 100vw;
   border-top: 1px solid #d9d9d9;
 
   @media (min-width: $tablet-width) {
     border-top: none;
+    width: 768px;
   }
 
-  &--form {
-    // gap: 32px;
+  @media (min-width: $desktop-width) {
+    width: 1440px;
   }
 }
