--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -26,7 +26,7 @@
 }
 
 .main-nav--closed .main-nav__toggle {
-  background: url("../img/icons/burger-menu.svg") no-repeat;
+  background: url("../img/sprite.svg#burger-menu") no-repeat;
 }
 
 @media (max-width: $mobile-width-only) {
@@ -56,6 +56,15 @@
     text-transform: uppercase;
     color: #000000;
     border-top: 1px solid #e6e6e6;
+
+    &:hover,
+    &:focus {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 
   .main-nav--nojs .main-nav__toggle {
@@ -82,7 +91,7 @@
 }
 
 .main-nav--opened .main-nav__toggle {
-  background: url("../img/icons/close.svg") no-repeat top center;
+  background: url("../img/sprite.svg#close") no-repeat top center;
 }
 
 @media (min-width: $tablet-width) {
@@ -96,6 +105,15 @@
     @include site-title(18px, 24px);
     color: #000000;
     text-transform: uppercase;
+
+    &:not(.main-nav__link--current):hover,
+    &:not(.main-nav__link--current):focus {
+      opacity: 0.6;
+    }
+
+    &:not(.main-nav__link--current):active {
+      opacity: 0.3;
+    }
 
     @media (min-width: $tablet-width) {
       &--secondary {
