--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -36,7 +36,7 @@
 
   .main-nav--opened .main-nav__wrapper {
     position: absolute;
-    top: 0;
+    top: 17px;
     z-index: 3;
     display: flex;
     flex-wrap: wrap;
