--- a/source/sass/blocks/diet-card.scss
+++ b/source/sass/blocks/diet-card.scss
@@ -154,127 +154,19 @@
     content: "";
     width: 24px;
     height: 12px;
-    top: 2px;
-    right: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 15px;
     background: url("../img/sprite.svg#arrow-mobile");
 
     @media (min-width: $tablet-width) {
-      top: 10px;
-      right: 25px;
+      margin-left: 25px;
     }
   }
+
+  &:hover::after,
+  &:focus::after {
+    width: 32px;
+    background: url("../img/sprite.svg#big-arrow-mobile");
+  }
 }
-
-// @media (min-width: $tablet-width) {
-//   .diet-card {
-//     padding: 77px 62px 57px 52px;
-
-//     &::before {
-//       position: absolute;
-//       top: 91px;
-//       left: 446px;
-//       width: 200px;
-//       height: 200px;
-//       background-color: $main-color;
-//       border-radius: 50%;
-//       content: "";
-//     }
-
-//     &--slim {
-//       &::after {
-//         position: absolute;
-//         width: 36px;
-//         height: 50px;
-//         top: 81px;
-//         left: 476px;
-//         background: url("../img/icons/slim-icon.svg") no-repeat;
-//         content: "";
-//       }
-//     }
-
-//     &--pro {
-//       &::after {
-//         position: absolute;
-//         width: 67px;
-//         height: 28px;
-//         top: 135px;
-//         left: 412px;
-//         background: url("../img/icons/pro-icon.svg") no-repeat;
-//         content: "";
-//       }
-//     }
-//   }
-
-//   .diet-card__title {
-//     @include site-title(36px, 36px);
-//     margin: 0;
-//     margin-bottom: 24px;
-//   }
-
-//   .diet-card__intro {
-//     @include site-content (16px, 24px);
-//     margin-right: 316px;
-//     margin-bottom: 52px;
-//   }
-
-//   .diet-card__link {
-//     @include site-title(20px, 30px);
-//     color: #000000;
-//   }
-// }
-
-// @media (min-width: $desktop-width) {
-//   .diet-card {
-//     padding: 77px 62px 55px 52px;
-
-//     &::before {
-//       position: absolute;
-//       top: 47px;
-//       left: 52px;
-//       width: 100px;
-//       height: 100px;
-//       background-color: $main-color;
-//       border-radius: 50%;
-//       content: "";
-//     }
-
-//     &--slim {
-//       &::after {
-//         position: absolute;
-//         width: 70px;
-//         height: 97px;
-//         top: 41px;
-//         left: 67px;
-//         background: url("../img/icons/slim-icon.svg") no-repeat;
-//         content: "";
-//       }
-//     }
-
-//     &--pro {
-//       &::after {
-//         position: absolute;
-//         width: 134px;
-//         height: 56px;
-//         top: 67px;
-//         left: 33px;
-//         background: url("../img/icons/pro-icon.svg") no-repeat;
-//         content: "";
-//       }
-//     }
-//   }
-
-//   .diet-card__title {
-//     margin: 0 0 73px 162px;
-//   }
-
-//   .diet-card__intro {
-//     @include site-content (16px, 24px);
-//     margin: 0;
-//     margin-bottom: 23px;
-//   }
-
-//   .diet-card__link {
-//     @include site-title(20px, 30px);
-//     color: #000000;
-//   }
-// }
