--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -2,7 +2,7 @@
 @use "../variables.scss" as *;
 
 .hero {
-  width: 100vw;
+  width: 320px;
   position: relative;
   padding-bottom: 20px;
 
@@ -47,11 +47,12 @@
   }
 
   @media (min-width: $tablet-width) {
+    width: 768px;
     padding-bottom: 0;
   }
 
   @media (min-width: $desktop-width) {
-    max-width: 1440px;
+    width: 1440px;
     min-height: 694px;
     padding-bottom: 82px;
     margin-top: -108px;
