--- a/source/sass/blocks/main-container.scss
+++ b/source/sass/blocks/main-container.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   width: 320px;
-  // margin: 0 auto;
+  margin: 0 auto;
   // width: 100vw;
   border-top: 1px solid #d9d9d9;
 
