--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -124,6 +124,7 @@
     @media (min-width: $desktop-width) {
       @include site-title(20px, 30px);
       text-transform: uppercase;
+      // background-color: $main-color;
       color: #ffffff;
 
       &--secondary {
