--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -40,6 +40,7 @@
       font-size: 20px;
       z-index: 1;
       width: 244px;
+      vertical-align: middle;
       height: 54px;
       padding: 14px 26px;
       line-height: 20px;
