--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -183,10 +183,10 @@
     &::before {
       position: absolute;
       content: "";
-      top: 0;
+      top: -1px;
       left: 0;
-      width: 30px;
-      height: 30px;
+      width: 31px;
+      height: 31px;
       border: 1px solid #cdcdcd;
       border-radius: 50%;
 
@@ -199,7 +199,7 @@
 
     &::after {
       position: absolute;
-      top: 10px;
+      top: 9px;
       left: 10px;
       width: 12px;
       height: 12px;
@@ -207,7 +207,7 @@
       background-color: #68b738;
 
       @media (min-width: $tablet-width) {
-        left: 11px;
+        left: 12px;
         top: 11px;
         width: 18px;
         height: 18px;
@@ -275,10 +275,18 @@
   padding: 14px 15px;
   border: 1px solid #e7e7e7;
 
-  &:hover,
+  &:hover {
+    border-color: transparent;
+    outline: 2px solid #cdcdcd;
+  }
+
   &:focus {
     border-color: transparent;
     outline: 2px solid #444444;
+
+    & + label {
+      outline: 2px solid #444444;
+    }
   }
 
   &--email {
@@ -305,7 +313,6 @@
 
 .form__title {
   @include site-title(24px, 26px);
-  // padding-right: 93px;
   margin-bottom: 35px;
 
   @media (min-width: $tablet-width) {
