--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -27,6 +27,8 @@
   @media (min-width: $tablet-width) {
     flex-direction: row;
     align-items: flex-end;
+    padding-top: 0;
+    padding-bottom: 0;
     min-height: 52px;
   }
 
