--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -72,17 +72,21 @@
   }
 
   .main-nav--nojs .main-nav__wrapper {
-    position: static;
+    position: ralative;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: #ffffff;
   }
 
   .main-nav--nojs .main-nav__link {
     @include site-title(20px, 20px);
     padding: 22px 0 24px;
+    width: 100%;
+    text-align: center;
     font-weight: 500;
     text-transform: uppercase;
     color: #000000;
