--- a/source/sass/blocks/catalog-additional.scss
+++ b/source/sass/blocks/catalog-additional.scss
@@ -2,35 +2,83 @@
 @use "../variables.scss" as *;
 
 .catalog-additional {
-  @include site-container;
+  // @include site-container;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  padding-top: 25px;
 
   @media (min-width: $tablet-width) {
     gap: 0;
+    padding-top: 68px;
   }
 
   @media (min-width: $desktop-width) {
     display: grid;
-    grid-template-columns: 896px 245px;
+    grid-template-columns: 1006px 245px;
     column-gap: 79px;
     padding-bottom: 85px;
+    padding-top: 76px;
+    // padding-left: 110px;
+    // padding-right: 110px;
   }
 }
 
 .catalog-additional__title {
   @include site-title(24px, 24px);
+  position: relative;
   margin-bottom: 36px;
+  padding-left: 20px;
 
   @media (min-width: $tablet-width) {
-    margin-left: 36px;
+    @include site-title(36px, 36px);
+    padding-left: 66px;
     margin-bottom: 80px;
   }
 
   @media (min-width: $desktop-width) {
-    @include site-title(36px, 36px);
     grid-column: 1/3;
     margin-bottom: 80px;
+    padding-left: 110px;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    height: 2px;
+    width: calc(100vw - 280px);
+    min-width: 53px;
+    top: 15px;
+    // transform: translateY(-50%);
+    background-color: $main-color;
+    margin-left: 21px;
+
+    @media (min-width: $tablet-width) {
+      top: 22px;
+      width: 328px;
+      margin-left: 36px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 957px;
+    }
+  }
+
+  &::before {
+    @media (min-width: $tablet-width) {
+      position: absolute;
+      content: "";
+      top: 22px;
+      width: 30px;
+      height: 2px;
+      background-color: $main-color;
+      margin-right: 37px;
+      left: 0;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 70px;
+      margin-right: 40px;
+    }
   }
 }
