--- a/source/sass/blocks/promotion.scss
+++ b/source/sass/blocks/promotion.scss
@@ -3,13 +3,10 @@
 @use "../variables.scss" as *;
 
 .promotion {
-  // @include site-container;
-  padding-top: 35px;
-  padding-bottom: 35px;
+  padding: 35px 20px 35px;
 
   @media (min-width: $tablet-width) {
-    padding-top: 69px;
-    padding-bottom: 76px;
+    padding: 69px 30px 76px;
   }
 
   @media (min-width: $desktop-width) {
