Adds fixes for form pixel-perfect

--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -5,7 +5,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: end;
-  padding: 19px 20px 25px;
+  padding: 19px 0 25px;
   border-bottom: 1px solid #ebebeb;
   // margin-right: calc((320px - 100vh) / 2);
 
