--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,21 +2,17 @@
 @use "../variables.scss" as *;
 
 .form {
-  @include site-container;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   padding-bottom: 32px;
-  // width: 320px;
 
   @media (min-width: $tablet-width) {
     padding-bottom: 72px;
-    // width: 768px;
   }
 
   @media (min-width: $desktop-width) {
     padding-bottom: 82px;
-    // width: 1440px;
   }
 }
 
@@ -28,8 +24,8 @@
 
   @media (min-width: $tablet-width) {
     max-width: 768px;
-    margin-left: 40px;
-    margin-right: 37px;
+    margin-left: 71px;
+    margin-right: 67px;
     margin-bottom: 74px;
     gap: 68px;
   }
@@ -40,83 +36,41 @@
     max-width: 1220px;
     margin: 0;
     margin-bottom: 69px;
+    margin-left: 110px;
+    margin-right: 110px;
     gap: 0;
   }
 }
 
 .form__fieldset {
-  // @include site-container;
-  padding: 0;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   flex-wrap: wrap;
   gap: 13px;
   max-width: 100%;
-  padding-top: 0;
+  padding: 0;
   padding-bottom: 22px;
   margin: 0;
   border: none;
 
   @media (min-width: $tablet-width) {
     gap: 18px;
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-  }
-
-  @media (min-width: $desktop-width) {
     padding-bottom: 0;
   }
 
   &--additional {
-    margin-bottom: 34px;
     padding-bottom: 0;
-
-    @media (min-width: $tablet-width) {
-      justify-content: space-between;
-      flex-direction: row;
-      padding-left: 40px;
-      padding-right: 40px;
-      margin-bottom: 52px;
-      row-gap: 32px;
-    }
-
-    @media (min-width: $desktop-width) {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr 245px;
-      padding: 0;
-      margin-bottom: 61px;
-    }
   }
 
   &--owner,
   &--comment {
     @media (min-width: $tablet-width) {
-      padding-left: 40px;
-      padding-right: 37px;
       margin-bottom: 65px;
     }
 
     @media (min-width: $desktop-width) {
       padding: 0;
-    }
-  }
-
-  &--owner,
-  &--comment,
-  &--additional {
-    position: relative;
-
-    &::after {
-      // content: "";
-      position: absolute;
-      z-index: -1;
-      top: 0;
-      left: 20px;
-      height: 2px;
-      width: 100%;
-      background-color: $main-color;
     }
   }
 
@@ -128,8 +82,7 @@
   }
 
   &--radio {
-    padding-top: 22px;
-    padding-bottom: 19px;
+    padding: 22px 20px 19px;
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
 
@@ -145,11 +98,63 @@
   }
 
   &--cat {
-    @media (min-width: $desktop-width) {
-      // width: 569px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    @media (min-width: $tablet-width) {
+      padding: 0;
     }
   }
 }
+
+.form__fieldset-wrapper {
+  @include site-container;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+  gap: 13px;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 70px;
+    padding-right: 67px;
+    gap: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 110px;
+    padding-right: 110px;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 78px;
+  }
+
+  &--additional {
+    margin-bottom: 34px;
+
+    @media (min-width: $tablet-width) {
+      justify-content: space-between;
+      flex-direction: row;
+      row-gap: 32px;
+      padding-left: 70px;
+      padding-right: 70px;
+      margin-bottom: 50px;
+      padding-bottom: 0;
+    }
+
+    @media (min-width: $desktop-width) {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 245px;
+      gap: 0;
+      max-width: 1440px;
+      padding: 0;
+      padding-left: 110px;
+      padding-right: 110px;
+      margin-bottom: 61px;
+    }
+  }
+}
+
 
 .form__input-wrapper {
   display: flex;
@@ -164,6 +169,7 @@
 
   @media (min-width: $desktop-width) {
     width: 569px;
+    gap: 20px;
   }
 }
 
@@ -383,24 +389,73 @@
   @include site-title(24px, 26px);
   position: relative;
   margin-bottom: 35px;
-  padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
 
   @media (min-width: $tablet-width) {
     @include site-title(36px, 36px);
     margin-bottom: 76px;
+    padding-left: 70px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 110px;
+    padding-right: 110px;
   }
 
   &--header {
     @include site-title(36px, 36px);
-    padding: 27px 0 37px;
+    padding: 27px 20px 37px;
 
     @media (min-width: $tablet-width) {
       @include site-title(60px, 60px);
-      padding: 65px 20px 54px 39px;
+      padding: 65px 50px 54px 69px;
     }
 
     @media (min-width: $desktop-width) {
-      padding: 77px 0 56px;
+      padding: 77px 110px 56px;
+    }
+  }
+
+  &:not(.form__title--header)::after,
+  &:not(.form__title--header)::before {
+    position: absolute;
+    content: "";
+    top: 16px;
+    height: 2px;
+    background-color: $main-color;
+
+    @media (min-width: $tablet-width) {
+      top: 22px;
+    }
+  }
+
+  &:not(.form__title--header)::before {
+    @media (min-width: $tablet-width) {
+      width: 30px;
+      margin-left: -70px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 70px;
+      margin-left: -110px;
+    }
+  }
+
+  &--comment {
+    &::after {
+      width: 158px;
+      margin-left: 22px;
+
+      @media (min-width: $tablet-width) {
+        width: 478px;
+        margin-left: 38px;
+      }
+
+      @media (min-width: $desktop-width) {
+        width: 1108px;
+        margin-left: 40px;
+      }
     }
   }
 
@@ -410,39 +465,54 @@
     @media (min-width: $tablet-width) {
       margin-bottom: 57px;
     }
+
+    &::after {
+      width: 136px;
+      margin-left: 23px;
+
+      @media (min-width: $tablet-width) {
+        width: 446px;
+        margin-left: 42px;
+      }
+
+      @media (min-width: $desktop-width) {
+        width: 1078px;
+        margin-left: 40px;
+      }
+    }
   }
 
-  &:not(.form__title--header)::after {
-    position: absolute;
-    content: "";
-    top: 16px;
-    margin-left: 30px;
-    width: 100px;
-    height: 2px;
-    background-color: $main-color;
+  &--owner {
+    &::after {
+      right: 0;
+      width: 99px;
 
-    @media (min-width: $tablet-width) {
-      top: 22px;
-    }
+      @media (min-width: $tablet-width) {
+        right: auto;
+        width: 145px;
+        margin-left: 42px;
+      }
 
-    @media (min-width: $desktop-width) {
-      // width: 700px;
+      @media (min-width: $desktop-width) {
+        width: 778px;
+        margin-left: 40px;
+      }
     }
   }
 }
 
 .form__subtitle {
   @include site-title(14px, 18px);
-  padding: 0 54px 39px 0;
+  padding: 0 54px 39px 20px;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     @include site-title(20px, 30px);
-    padding: 0 375px 36px 40px;
+    padding: 0 375px 66px 70px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0 787px 66px 0;
+    padding: 0 897px 66px 110px;
   }
 }
 
@@ -456,10 +526,19 @@
   border: 1px solid #e7e7e7;
   text-transform: uppercase;
   color: #444444;
+  margin-left: 20px;
+  margin-right: 20px;
 
   @media (min-width: $tablet-width) {
     @include site-title(20px, 30px);
     min-height: 174px;
+    margin-left: 70px;
+    margin-right: 67px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 110px;
+    margin-right: 110px;
   }
 }
 
@@ -468,18 +547,21 @@
   flex-direction: column;
   flex-wrap: wrap;
   gap: 21px;
+  padding-left: 20px;
+  padding-right: 20px;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
     align-items: center;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 70px;
+    padding-right: 70px;
     gap: 64px;
   }
 
   @media (min-width: $desktop-width) {
     width: 827px;
-    padding: 0;
+    padding-left: 110px;
+    padding-right: 110px;
     gap: 84px;
   }
 }
