--- a/source/sass/blocks/promotion.scss
+++ b/source/sass/blocks/promotion.scss
@@ -23,6 +23,7 @@
   text-align: center;
   color: #ffffff;
   background-image: url("../img/cat-carrier-mobile.jpg");
+  background-color: $main-color;
   background-repeat: no-repeat;
 
   @media (min-resolution: 2dppx) {
