--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -4,15 +4,17 @@
 .social {
   display: flex;
   align-self: center;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 26px;
 
   @media (min-width: $tablet-width) {
-    margin-left: 145px;
+    margin-left: 20px;
+    flex-grow: 1;
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 401px;
+    margin-left: 20px;
   }
 }
 
