--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -15,7 +15,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
-  height: 40px;
+  min-height: 40px;
 
   &:hover,
   &:focus {
@@ -34,14 +34,14 @@
     padding: 10px 44px;
     font-size: 14px;
     line-height: 18px;
-    height: 40px;
+    // height: 40px;
 
     @media (min-width: $tablet-width) {
       font-size: 20px;
       z-index: 1;
       width: 244px;
       vertical-align: middle;
-      height: 54px;
+      min-height: 54px;
       padding: 14px 26px;
       line-height: 20px;
       margin-left: 91px;
@@ -53,7 +53,7 @@
       grid-row: 2/3;
       grid-column: 1/2;
       width: 244px;
-      height: 54px;
+      min-height: 54px;
       padding: 14px 26px;
       line-height: 20px;
       margin-left: 80px;
