--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -103,6 +103,12 @@
     display: flex;
     flex-direction: row;
     gap: 35px;
+
+    @media (min-width: $desktop-width) {
+      max-width: 610px;
+      flex-wrap: wrap;
+      row-gap: 20px;
+    }
   }
 
   .main-nav__link {
@@ -128,7 +134,6 @@
     @media (min-width: $desktop-width) {
       @include site-title(20px, 30px);
       text-transform: uppercase;
-      // background-color: $main-color;
       color: #ffffff;
 
       &--secondary {
